--- a/Source/Sequencer/Deploy/Manifest.ini
+++ b/Source/Sequencer/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.sosouix.net
 Contact= +1-952-457-9224
 Restore= True
 Legacy= False
-System= False
+System= True
 
 [ExecuteWaits]
 Backup=
@@ -40,7 +40,7 @@ File = check.pk|17784|10/27/2019 9:32:48 PM
 File = license.txt|2581|5/3/2020 2:10:30 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 File = SoSouiX.net.url|78|4/10/2016 7:27:00 PM
-File = SoSouiXSeq.exe|167936|12/22/2024 1:27:44 AM
+File = SoSouiXSeq.exe|167936|1/22/2025 1:12:25 AM
 Folder = WAV|<DIR>|10/7/2022 6:44:10 PM
 Folder = WAV\Drumkit|<DIR>|6/16/2024 1:17:23 PM
 File = WAV\Drumkit\Crash.wav|222192|5/25/2018 4:14:20 AM
